--- a/.github/workflows/deploy_.yml
+++ b/.github/workflows/deploy_.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm run build
 
       - name: Upload production-ready build files
-        uses: actions/upload-artifact@latest
+        uses: actions/upload-artifact@v3
         with:
           name: production-files
           path: ./dist
@@ -50,7 +50,7 @@ jobs:
           echo "Cleared existing files from gh-pages"
 
       - name: Download artifact
-        uses: actions/download-artifact@latest
+        uses: actions/download-artifact@v3
         with:
           name: production-files
           path: ./dist
